[package]
name = "one-of-many-proofs"
version = "0.1.0"
authors = ["cargodog <cargodog@protonmail.com>"]
edition = "2018"
description = "Implementation of one-of-many zero-knowledge membership proofs."
license-file = "LICENSE"
repository = "https://github.com/cargodog/one-of-many-proofs"

[dependencies]
rand = { version = "0.8", optional = true }
polynomials = "0.2"

[dependencies.curve25519-dalek]
version = "4.1.1"
features = ["serde", "digest", "rand_core"]

[dependencies.sha3]
default-features = false
version = "0.10"

[dependencies.merlin]
default-features = false
version = "3"

[dependencies.serde]
default-features = false
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
criterion = "0.3"
serde_cbor = "0.11"

[features]
default = ["std", "serde"]
std = []
rand_core = ["rand"]

[[bench]]
name = "proof_benchmarks"
harness = false
